--- a/css/main.css
+++ b/css/main.css
@@ -543,138 +543,80 @@ template {
   margin-left: 5px;
 }
 
-.logo {
-  transition: all .3s ease;
-}
-
-.logo:hover {
-  opacity: .8;
-}
-
-.logo:active {
-  opacity: .6;
-}
-
-.header {
-  background-color: #131313;
-  z-index: 100;
-}
-
-.header-inner {
+.shop-cards__inner {
   display: flex;
-  align-items: center;
-  padding: 3.5rem 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 750px) {
+  .shop-cards__inner {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.shop-card {
+  width: 35rem;
+  border-radius: 8px;
+  background-color: #f1f1f1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 2.2rem;
+}
+
+@media only screen and (max-width: 1100px) {
+  .shop-card {
+    width: 28rem;
+  }
 }
 
 @media only screen and (max-width: 56.25em) {
-  .header-inner {
-    padding: 3.2rem 0;
+  .shop-card {
+    width: 22.3rem;
   }
+}
+
+@media only screen and (max-width: 750px) {
+  .shop-card {
+    width: 100%;
+  }
+  .shop-card:not(:first-child) {
+    margin-top: 9rem;
+  }
+}
+
+.shop-card__img {
+  margin: 0 auto;
+  margin-top: -6rem;
 }
 
 @media only screen and (max-width: 37.5em) {
-  .header-inner {
-    justify-content: space-between;
+  .shop-card__img {
+    margin-top: -5rem;
   }
 }
 
-.header-list {
-  margin-left: 19.7rem;
-}
-
-@media only screen and (max-width: 56.25em) {
-  .header-nav {
-    display: none;
-  }
-}
-
-.cart {
-  display: inline-block;
-  margin-left: auto;
-  color: #fff;
-  text-decoration: none;
-  transition: all .3s ease;
-}
-
-.cart:hover {
-  color: #d87d4a;
-}
-
-.burger-menu {
-  display: none;
-  width: 1.6rem;
-  height: 3px;
-  background-color: #fff;
-  position: relative;
-}
-
-.burger-menu::before, .burger-menu::after {
-  display: inline-block;
-  content: "";
-  width: 1.6rem;
-  height: 3px;
-  position: absolute;
-  background-color: #fff;
-}
-
-.burger-menu::before {
-  top: 6px;
-}
-
-.burger-menu::after {
-  top: -6px;
-}
-
-@media only screen and (max-width: 56.25em) {
-  .burger-menu {
-    display: inline-block;
-    margin-right: 4rem;
-  }
-}
-
-@media only screen and (max-width: 37.5em) {
-  .burger-menu {
-    margin-right: auto;
-  }
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  align-items: center;
-}
-
-.nav-list__link {
+.shop-card__heading {
   font-weight: bold;
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   line-height: 2.5rem;
-  letter-spacing: 2px;
+  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #fff;
-  text-decoration: none;
-  display: inline-block;
-  transition: all .3s ease;
-}
-
-.nav-list__link:hover {
-  color: #d87d4a;
-}
-
-.nav-list__item:not(:last-child) {
-  margin-right: 3.4rem;
-}
-
-@media only screen and (max-width: 37.5em) {
-  .nav-list__item:not(:last-child) {
-    margin-right: 0;
-    margin-bottom: 1.6rem;
-  }
+  color: #000;
+  margin-bottom: 1.5rem;
 }
 
 .footer {
   background-color: #101010;
   padding: 7.5rem 4.8rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .footer {
+    padding: 6rem 0 4.6rem;
+  }
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -700,6 +642,12 @@ template {
   background-color: #d87d4a;
   top: -7.5rem;
   left: 0;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .footer-inner::before {
+    top: -6rem;
+  }
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -815,6 +763,368 @@ template {
   color: #d87d4a;
 }
 
+.logo {
+  transition: all .3s ease;
+}
+
+.logo:hover {
+  opacity: .8;
+}
+
+.logo:active {
+  opacity: .6;
+}
+
+.header {
+  background-color: #131313;
+  z-index: 100;
+}
+
+.header--black {
+  background-color: #000;
+}
+
+.header-inner {
+  display: flex;
+  align-items: center;
+  padding: 3.5rem 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+@media only screen and (max-width: 56.25em) {
+  .header-inner {
+    padding: 3.2rem 0;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .header-inner {
+    justify-content: space-between;
+  }
+}
+
+.header-list {
+  margin-left: 19.7rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .header-nav {
+    display: none;
+  }
+}
+
+.cart {
+  display: inline-block;
+  margin-left: auto;
+  color: #fff;
+  text-decoration: none;
+  transition: all .3s ease;
+}
+
+.cart:hover {
+  color: #d87d4a;
+}
+
+.burger-menu {
+  display: none;
+  width: 1.6rem;
+  height: 3px;
+  background-color: #fff;
+  position: relative;
+}
+
+.burger-menu::before, .burger-menu::after {
+  display: inline-block;
+  content: "";
+  width: 1.6rem;
+  height: 3px;
+  position: absolute;
+  background-color: #fff;
+}
+
+.burger-menu::before {
+  top: 6px;
+}
+
+.burger-menu::after {
+  top: -6px;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .burger-menu {
+    display: inline-block;
+    margin-right: 4rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .burger-menu {
+    margin-right: auto;
+  }
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-list__link {
+  font-weight: bold;
+  font-size: 1.3rem;
+  line-height: 2.5rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  transition: all .3s ease;
+}
+
+.nav-list__link:hover {
+  color: #d87d4a;
+}
+
+.nav-list__item:not(:last-child) {
+  margin-right: 3.4rem;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .nav-list__item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 1.6rem;
+  }
+}
+
+.comment {
+  margin: 16rem 0;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .comment {
+    margin: 9.6rem 0;
+  }
+}
+
+.comment-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .comment-inner {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+}
+
+.comment-left {
+  max-width: 44.5rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .comment-left {
+    max-width: 57.3rem;
+    margin-top: 6.3rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .comment-left {
+    margin-top: 4rem;
+  }
+}
+
+.comment-right {
+  border-radius: 8px;
+  margin-left: 2rem;
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .comment-right {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
+.comment-heading {
+  margin-bottom: 3.2rem;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .comment-heading {
+    font-size: 2.8rem;
+    line-height: 3.8rem;
+    letter-spacing: 1px;
+  }
+}
+
+.comment-heading__text {
+  color: #d87d4a;
+}
+
+.product-comment {
+  margin: 12rem 0;
+}
+
+.page-hero {
+  background-color: #000;
+  padding: 9.8rem 0;
+  text-align: center;
+}
+
+.page-heading {
+  color: #fff;
+}
+
+.yx1-img {
+  background-image: url(../../images/page-headphones/yx1.png);
+  background-repeat: no-repeat;
+  background-position: top bottom 4rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .yx1-img {
+    background-size: 22rem 26rem;
+  }
+}
+
+.section-products {
+  margin: 16rem 0;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .section-products {
+    margin: 12rem 0;
+  }
+}
+
+.product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product {
+    flex-direction: column;
+  }
+}
+
+.product:not(:last-child) {
+  margin-bottom: 16rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product:not(:last-child) {
+    margin-bottom: 12rem;
+  }
+}
+
+.product:last-child {
+  margin-bottom: 24rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product:last-child {
+    margin-bottom: 17rem;
+  }
+}
+
+.product:nth-child(2) {
+  flex-direction: row-reverse;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product:nth-child(2) {
+    flex-direction: column;
+  }
+}
+
+.product__heading {
+  margin: 1.6rem 0 3.2rem;
+}
+
+.product__text {
+  margin-bottom: 4rem;
+  color: #000;
+  opacity: .5;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product__text {
+    margin-bottom: 2.4rem;
+  }
+}
+
+.product-img {
+  max-width: 54rem;
+  width: 100%;
+  height: 56rem;
+  background-color: #f1f1f1;
+  border-radius: 8px;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product-img {
+    max-width: 69rem;
+    width: 100%;
+    height: 35.2rem;
+  }
+}
+
+.xx99-2-img {
+  background-image: url(../../images/page-headphones/xx99-2.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 4rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .xx99-2-img {
+    background-size: 22rem 26rem;
+  }
+}
+
+.xx99-1-img {
+  background-image: url(../../images/page-headphones/xx99-1.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 3rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .xx99-1-img {
+    background-size: 22rem 26rem;
+  }
+}
+
+.xx59-img {
+  background-image: url(../../images/page-headphones/xx59.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 4rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .xx59-img {
+    background-size: 22rem 26rem;
+  }
+}
+
+.product-info {
+  padding: 0 1.5rem;
+  max-width: 44.5rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .product-info {
+    text-align: center;
+    margin-top: 5.2rem;
+    max-width: 57.2rem;
+    padding: 0;
+  }
+}
+
 .hero {
   background: #121212;
   background-image: url(../../images/hero-bg-img.png);
@@ -872,85 +1182,20 @@ template {
   }
 }
 
-.shop-cards {
+.section-cards {
   margin: 20rem 0 16.8rem;
 }
 
 @media only screen and (max-width: 56.25em) {
-  .shop-cards {
+  .section-cards {
     margin: 15rem 0;
   }
 }
 
 @media only screen and (max-width: 37.5em) {
-  .shop-cards {
+  .section-cards {
     margin: 10rem 0;
   }
-}
-
-.shop-cards__inner {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media only screen and (max-width: 750px) {
-  .shop-cards__inner {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.shop-card {
-  width: 35rem;
-  border-radius: 8px;
-  background-color: #f1f1f1;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-bottom: 2.2rem;
-}
-
-@media only screen and (max-width: 1100px) {
-  .shop-card {
-    width: 28rem;
-  }
-}
-
-@media only screen and (max-width: 56.25em) {
-  .shop-card {
-    width: 22.3rem;
-  }
-}
-
-@media only screen and (max-width: 750px) {
-  .shop-card {
-    width: 100%;
-  }
-  .shop-card:not(:first-child) {
-    margin-top: 9rem;
-  }
-}
-
-.shop-card__img {
-  margin: 0 auto;
-  margin-top: -6rem;
-}
-
-@media only screen and (max-width: 37.5em) {
-  .shop-card__img {
-    margin-top: -5rem;
-  }
-}
-
-.shop-card__heading {
-  font-weight: bold;
-  font-size: 1.8rem;
-  line-height: 2.5rem;
-  letter-spacing: 1.3px;
-  text-transform: uppercase;
-  color: #000;
-  margin-bottom: 1.5rem;
 }
 
 .speaker1-inner {
@@ -1146,71 +1391,26 @@ template {
   margin-bottom: 3.2rem;
 }
 
-.comment {
-  margin: 20rem 0;
+.zx9-img {
+  background-image: url(../../images/page-headphones/zx9.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 3rem;
 }
 
 @media only screen and (max-width: 56.25em) {
-  .comment {
-    margin: 9.6rem 0;
+  .zx9-img {
+    background-size: 22rem 26rem;
   }
 }
 
-.comment-inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.zx7-img {
+  background-image: url(../../images/page-headphones/zx7.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 3rem;
 }
 
 @media only screen and (max-width: 56.25em) {
-  .comment-inner {
-    flex-direction: column-reverse;
-    text-align: center;
+  .zx7-img {
+    background-size: 22rem 26rem;
   }
-}
-
-.comment-left {
-  max-width: 44.5rem;
-}
-
-@media only screen and (max-width: 56.25em) {
-  .comment-left {
-    max-width: 57.3rem;
-    margin-top: 6.3rem;
-  }
-}
-
-@media only screen and (max-width: 37.5em) {
-  .comment-left {
-    margin-top: 4rem;
-  }
-}
-
-.comment-right {
-  border-radius: 8px;
-  margin-left: 2rem;
-  overflow: hidden;
-}
-
-@media only screen and (max-width: 56.25em) {
-  .comment-right {
-    margin-left: 0;
-    width: 100%;
-  }
-}
-
-.comment-heading {
-  margin-bottom: 3.2rem;
-}
-
-@media only screen and (max-width: 37.5em) {
-  .comment-heading {
-    font-size: 2.8rem;
-    line-height: 3.8rem;
-    letter-spacing: 1px;
-  }
-}
-
-.comment-heading__text {
-  color: #d87d4a;
 }
