--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,10 @@
   background-color: $color-dark;
   padding: 7.5rem 4.8rem;
 
+  @include respond (tablet) {
+    padding: 6rem 0 4.6rem;
+  }
+
   @include respond (phone) {
     text-align: center;
     padding: 4.8rem 0 3.8rem;
@@ -21,6 +25,10 @@
     background-color: $color-primary;
     top: -7.5rem;
     left: 0;
+
+    @include respond (tablet) {
+      top: -6rem;
+    }
 
     @include respond(phone) {
       top: -4.8rem;
@@ -82,7 +90,7 @@
   }
 
   @include respond(phone) {
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
   }
 
