--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,6 +13,10 @@
 .header {
   background-color: #131313;
   z-index: 100;
+
+  &--black {
+    background-color: $color-black;
+  }
 }
 
 .header-inner {
