--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import './pages/earphones';
 @import './pages/headphones';
 @import './pages/home';
+@import './pages/product-detail';
 @import './pages/speakers';
 
 
