--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -60,3 +60,63 @@
   color: $color-primary;
   margin-left: 5px;
 }
+
+.btn-add {
+  display: inline-block;
+  background-color: $color-light-grey;
+  width: 12rem;
+  padding: 1.5rem 0;
+  margin-right: 1.6rem;
+  border: 1px solid transparent;
+
+
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  text-decoration: none;
+  color: $color-black;
+}
+
+.btn-minus {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #b5b5b5;
+  width: 7px;
+  height: 1.5px;
+  margin-right: 2.5rem;
+  margin-bottom: 4px;
+  transition: all .3s ease;
+
+  &:hover {
+    background-color: $color-primary;
+  }
+}
+
+.btn-plus {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #b5b5b5;
+  width: 7px;
+  height: 1.5px;
+  position: relative;
+  margin-left: 2.5rem;
+  margin-bottom: 4px;
+  transition: all .3s ease;
+
+  &:hover,
+  &:hover::before {
+    background-color: $color-primary;
+  }
+
+  &::before {
+    @include baElements(7px, 1.5px);
+    background-color: #b5b5b5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotate(90deg);
+  transition: all .3s ease;
+  }
+
+}
