--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -48,17 +48,19 @@
     position: relative;
     background-color: transparent;
     color: rgba(0, 0, 0, 0.5);
+    position: relative;
 
-    &:hover {
-      color: $color-primary;
-      background-color: transparent;
+    &::after {
+      @include baElements(10px, 1rem);
+      background-image: url(../../images/i-arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      position: absolute;
+      top: 4px;
+      margin-left: 1rem;
     }
   }
-}
-
-.btn-arrow {
-  color: $color-primary;
-  margin-left: 5px;
 }
 
 .btn-add {
@@ -80,13 +82,13 @@
 
 .btn-minus {
   display: inline-block;
-  text-decoration: none;
   background-color: #b5b5b5;
   width: 7px;
   height: 1.5px;
   margin-right: 2.5rem;
   margin-bottom: 4px;
   transition: all .3s ease;
+  cursor: pointer;
 
   &:hover {
     background-color: $color-primary;
@@ -95,7 +97,6 @@
 
 .btn-plus {
   display: inline-block;
-  text-decoration: none;
   background-color: #b5b5b5;
   width: 7px;
   height: 1.5px;
@@ -103,6 +104,7 @@
   margin-left: 2.5rem;
   margin-bottom: 4px;
   transition: all .3s ease;
+  cursor: pointer;
 
   &:hover,
   &:hover::before {
@@ -116,7 +118,7 @@
     top: 0;
     left: 0;
     transform: rotate(90deg);
-  transition: all .3s ease;
+    transition: all .3s ease;
   }
 
 }
