--- a/sass/layout/_page-hero.scss
+++ b/sass/layout/_page-hero.scss
@@ -2,6 +2,9 @@
   background-color: $color-black;
   padding: 9.8rem 0;
   text-align: center;
+  @include respond (tablet){
+    margin-top: 9rem;
+  }
 }
 
 .page-heading {
