--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,7 +1,8 @@
 .cards {
   margin-top: 24rem;
-  @include respond (tablet){
-      margin-top: 17rem;
+
+  @include respond (tablet) {
+    margin-top: 17rem;
   }
 }
 
@@ -17,29 +18,45 @@
   }
 }
 
+
 .shop-card {
-  width: 35rem;
-  border-radius: 8px;
-  background-color: $color-light-grey;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-bottom: 2.2rem;
 
-  @media only screen and(max-width: 1100px) {
-    width: 28rem;
-  }
 
-  @include respond(tablet) {
-    width: 22.3rem;
-  }
+  &__link {
+    transition: all .3s ease;
+    text-decoration: none;
+    width: 35rem;
+    border-radius: 8px;
+    background-color: $color-light-grey;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 2.2rem;
 
-  @media only screen and(max-width:750px) {
-    width: 100%;
+    &:hover {
+      box-shadow: 0 3px 12px 3px rgba(0, 0, 0, 0.2)
+    }
 
-    &:not(:first-child) {
-      margin-top: 9rem;
+    &:hover .btn--min {
+      color: $color-primary;
+      background-color: transparent;
+    }
+
+    @media only screen and(max-width: 1100px) {
+      width: 28rem;
+    }
+
+    @include respond(tablet) {
+      width: 22.3rem;
+    }
+
+    @media only screen and(max-width:750px) {
+      width: 100%;
+
+      &:not(:first-child) {
+        margin-top: 9rem;
+      }
     }
   }
 
