--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,6 +11,7 @@
     background-position: center top -9rem;
     background-repeat: no-repeat;
     text-align: center;
+    margin-top: 9rem;
   }
 
   @include respond (phone) {
