--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import './layout/page-hero';
 
 // PAGES
+@import './pages/checkout';
 @import './pages/earphones';
 @import './pages/headphones';
 @import './pages/home';
